Tests/CompilerTests/negative/invalid-binding-declaration.expected
negative/invalid-binding-declaration.hylo:6.7-13: error: tuple pattern cannot match values of type 'A'
  let (x, y): A = a
      ~~~~~~
negative/invalid-binding-declaration.hylo:7.7-15: error: incompatible labels: found '(abc:)', expected '(bca:)'
  let (abc: z) = (bca: a)
      ~~~~~~~~
